API docs for updatePost Endpoint
